// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat/delete-message/slack DeleteMessage when specified destination does exist performs correctly 1`] = `
Object {
  "value": Object {},
}
`;

exports[`chat/delete-message/slack DeleteMessage when specified destination does not exist returns error 1`] = `
Object {
  "error": ObjectContaining {
    "kind": StringMatching /HTTPError/,
    "message": StringMatching /Expected HTTP error/,
    "properties": ObjectContaining {
      "title": "channel_not_found",
    },
    "statusCode": Any<Number>,
  },
}
`;

exports[`chat/delete-message/slack DeleteMessage when specified message id does not exist returns error 1`] = `
Object {
  "error": ObjectContaining {
    "kind": StringMatching /HTTPError/,
    "message": StringMatching /Expected HTTP error/,
    "properties": ObjectContaining {
      "title": "message_not_found",
    },
    "statusCode": Any<Number>,
  },
}
`;
